--- a/package.json
+++ b/package.json
@@ -1401,8 +1401,8 @@
                     "Amazon States Language (YAML)"
                 ],
                 "extensions": [
-                    ".asl.yml",
-                    ".asl.yaml"
+                    ".asl.yaml",
+                    ".asl.yml"
                 ]
             },
             {
@@ -1553,7 +1553,7 @@
     },
     "dependencies": {
         "adm-zip": "^0.4.13",
-        "amazon-states-language-service": "^1.6.1",
+        "amazon-states-language-service": "^1.6.3",
         "async-lock": "^1.1.3",
         "aws-sdk": "^2.581.0",
         "aws-ssm-document-language-service": "^1.0.0",
