--- a/package.json
+++ b/package.json
@@ -800,27 +800,32 @@
                 {
                     "command": "aws.quickStart",
                     "when": "view == aws.explorer",
-                    "group": "y_quickStart@1"
+                    "group": "4_quickStart@1"
                 },
                 {
                     "command": "aws.help",
                     "when": "view == aws.explorer",
-                    "group": "z_externalLinks@1"
+                    "group": "5_externalLinks@1"
                 },
                 {
                     "command": "aws.github",
                     "when": "view == aws.explorer",
-                    "group": "z_externalLinks@2"
+                    "group": "5_externalLinks@2"
                 },
                 {
                     "command": "aws.createIssueOnGitHub",
                     "when": "view == aws.explorer",
-                    "group": "z_externalLinks@3"
+                    "group": "5_externalLinks@3"
                 },
                 {
                     "command": "aws.submitFeedback",
                     "when": "view == aws.explorer",
-                    "group": "z_externalLinks@4"
+                    "group": "5_externalLinks@4"
+                },
+                {
+                    "command": "aws.aboutToolkit",
+                    "when": "view == aws.explorer",
+                    "group": "z_about@1"
                 },
                 {
                     "command": "aws.refreshCdkExplorer",
@@ -830,17 +835,12 @@
                 {
                     "command": "aws.cdk.help",
                     "when": "view == aws.cdk.explorer",
-                    "group": "z_externalLinks@2"
+                    "group": "1_externalLinks@1"
                 },
                 {
                     "command": "aws.cdk.provideFeedback",
                     "when": "view == aws.cdk.explorer",
-                    "group": "z_externalLinks@3"
-                },
-                {
-                    "command": "aws.aboutToolkit",
-                    "when": "view == aws.explorer",
-                    "group": "zz_about@1"
+                    "group": "1_externalLinks@2"
                 }
             ],
             "view/item/context": [
