--- a/package.json
+++ b/package.json
@@ -805,22 +805,22 @@
                 {
                     "command": "aws.help",
                     "when": "view == aws.explorer",
-                    "group": "5_externalLinks@1"
+                    "group": "y_externalLinks@1"
                 },
                 {
                     "command": "aws.github",
                     "when": "view == aws.explorer",
-                    "group": "5_externalLinks@2"
+                    "group": "y_externalLinks@2"
                 },
                 {
                     "command": "aws.createIssueOnGitHub",
                     "when": "view == aws.explorer",
-                    "group": "5_externalLinks@3"
+                    "group": "y_externalLinks@3"
                 },
                 {
                     "command": "aws.submitFeedback",
                     "when": "view == aws.explorer",
-                    "group": "5_externalLinks@4"
+                    "group": "y_externalLinks@4"
                 },
                 {
                     "command": "aws.aboutToolkit",
