--- a/buildspec/windowsTests.yml
+++ b/buildspec/windowsTests.yml
@@ -19,8 +19,8 @@ phases:
             # Should only affect tests run through IDEs team-hosted CodeBuild.
             # UNCOMMENT THE FOLLOWING WHEN VS CODE CAN BUILD IN WIN_SERVER_CORE_2019_BASE: https://github.com/microsoft/vscode/issues/77499
             # - |
-            #     if ($Env:CODEARTIFACT_DOMAIN -and $Env:CODEARTIFACT_REPO -and $Env:ACCOUNT_ID) {
-            #       aws codeartifact login --tool npm --domain "$CODEARTIFACT_DOMAIN" --domain-owner "$ACCOUNT_ID" --repository "$CODEARTIFACT_REPO"
+            #     if ($Env:TOOLKITS_CODEARTIFACT_DOMAIN -and $Env:TOOLKITS_CODEARTIFACT_REPO -and $Env:ACCOUNT_ID) {
+            #       aws codeartifact login --tool npm --domain "$TOOLKITS_CODEARTIFACT_DOMAIN" --domain-owner "$ACCOUNT_ID" --repository "$TOOLKITS_CODEARTIFACT_REPO"
             #         if ($?) {
             #             echo "Connected to CodeArtifact"
             #         } else {
