--- a/package.json
+++ b/package.json
@@ -625,10 +625,6 @@
                     "when": "false"
                 },
                 {
-                    "command": "aws.cdk.provideFeedback",
-                    "when": "false"
-                },
-                {
                     "command": "aws.showErrorDetails",
                     "when": "false"
                 },
@@ -838,9 +834,14 @@
                     "group": "z_externalLinks@1"
                 },
                 {
-                    "command": "aws.cdk.provideFeedback",
+                    "command": "aws.createIssueOnGitHub",
                     "when": "view == aws.cdk.explorer",
                     "group": "z_externalLinks@2"
+                },
+                {
+                    "command": "aws.submitFeedback",
+                    "when": "view == aws.cdk.explorer",
+                    "group": "z_externalLinks@3"
                 }
             ],
             "view/item/context": [
@@ -1095,11 +1096,6 @@
             {
                 "command": "aws.createIssueOnGitHub",
                 "title": "%AWS.command.createIssueOnGitHub%",
-                "category": "AWS"
-            },
-            {
-                "command": "aws.cdk.provideFeedback",
-                "title": "%AWS.command.cdk.provideFeedback%",
                 "category": "AWS"
             },
             {
