CI: fix python2.7 setup
- Pip2 and Python27 are no longer available (end-of-life) in the
  standard repo in the CodeBuild 5.0 image, so add workarounds to
  install them.
  - Python 2.7 is in the `Universe` repository.
  - Pip2 is not, install it with their install script.

ref https://github.com/aws/aws-toolkit-jetbrains/pull/2366

--- a/buildspec/linuxIntegrationTests.yml
+++ b/buildspec/linuxIntegrationTests.yml
@@ -14,12 +14,18 @@ phases:
             dotnet: 3.1
 
         commands:
+            # For Python2.x on Ubuntu 20.4:
+            - add-apt-repository universe
             - '>/dev/null add-apt-repository universe'
             - '>/dev/null apt-get -qq install -y apt-transport-https'
             - '>/dev/null apt-get -qq update'
             # Install other needed dependencies
-            - '>/dev/null apt-get -qq install -y jq python2.7 python-pip python3.6 python3.7 python3.8 python3-pip python3-distutils'
+            - '>/dev/null apt-get -qq install -y jq python2.7 python3.6 python3.7 python3.8 python3-pip python3-distutils'
             - '>/dev/null apt-get -qq install -y libgtk-3-dev libxss1 xvfb libnss3-dev libasound2 libasound2-plugins libsecret-1-0'
+            # For Python2.x on Ubuntu 20.4:
+            - curl https://bootstrap.pypa.io/2.7/get-pip.py --output get-pip.py
+            # For Python2.x on Ubuntu 20.4:
+            - python2 get-pip.py
             - '>/dev/null pip3 install --upgrade aws-sam-cli'
             - '>/dev/null pip3 install --upgrade awscli'
             - '>/dev/null pip3 install pylint'
