--- a/buildspec/linuxIntegrationTests.yml
+++ b/buildspec/linuxIntegrationTests.yml
@@ -14,6 +14,8 @@ phases:
             dotnet: 3.1
 
         commands:
+            # WORKAROUND for out-of-date yarn key. https://github.com/yarnpkg/yarn/issues/7866
+            - 'curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -'
             - '>/dev/null add-apt-repository universe'
             - '>/dev/null apt-get -qq install -y apt-transport-https'
             - '>/dev/null apt-get -qq update'
