CI: workaround invalid yarn key
Use package instead of fetching key via curl.

https://github.com/yarnpkg/yarn/issues/7866

--- a/buildspec/linuxIntegrationTests.yml
+++ b/buildspec/linuxIntegrationTests.yml
@@ -15,7 +15,7 @@ phases:
 
         commands:
             # WORKAROUND for out-of-date yarn key. https://github.com/yarnpkg/yarn/issues/7866
-            - 'curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -'
+            - '>/dev/null apt-get install dirmngr && apt-key adv --refresh-keys --keyserver keyserver.ubuntu.com'
             - '>/dev/null add-apt-repository universe'
             - '>/dev/null apt-get -qq install -y apt-transport-https'
             - '>/dev/null apt-get -qq update'
