--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -626,8 +626,10 @@ s3.download.object.conflict.skip=Skip
 s3.download.object.conflict.skip_rest=Skip All Conflicts
 s3.download.object.failed=Failed to download object {0}
 s3.download.object.progress=Downloading ''{0}''
+s3.error_loading=Failed to load children
 s3.last_modified=Last Modified
 s3.load_more=load more...
+s3.load_more_failed=Failed to load more! load more...
 s3.name=Name
 s3.new.folder=New folder...
 s3.new.folder.name=Folder name:
