--- a/gradle.properties
+++ b/gradle.properties
@@ -21,6 +21,7 @@ telemetryVersion=0.0.82
 assertjVersion=3.15.0
 junitVersion=4.13.1
 junit5Version=5.6.2
+apacheCommonsVersion=2.8.0
 mockitoKotlinVersion=2.2.0
 mockitoVersion=3.4.0
 
