Support pressing Stop in the Step Executor (#2436)

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -425,7 +425,7 @@ general.configure_button=Configure
 general.create_button=Create
 general.create_in_progress=Creating...
 general.delete=Delete
-general.execution.cancelled=canceled
+general.execution.canceled=canceled
 general.execution.cli_error=Command did not exist successfully, exit code: {0}\n
 general.execution.failed=failed
 general.execution.running=running...
@@ -437,6 +437,8 @@ general.name.label=Name:
 general.policy=Policy
 general.refresh=Refresh
 general.select_button=Select
+general.step.canceled={0} has been canceled
+general.step.failed={0} has failed: {1}
 general.time=Time
 general.time.five_minutes=Five Minutes
 general.time.one_minute=One Minute
