--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -633,7 +633,7 @@ s3.last_modified=Last Modified
 s3.load_more=load more...
 s3.load_more_failed=Failed to load more! load more...
 s3.name=Name
-s3.new.folder=New folder...
+s3.new.folder=New Folder...
 s3.new.folder.name=Folder name:
 s3.open.file_too_big=The editor cannot open files larger than {0}
 s3.open.viewer.bucket.action=View Bucket
