Improve error messages when properties are not found in templates (#2449) (#2450)

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -170,7 +170,7 @@ cloudformation.execute_change_set.failed=Failed to execute change set against {0
 cloudformation.execute_change_set.success=Successfully executed change set against {0}
 cloudformation.execute_change_set.success.title=Successfully executed change set
 cloudformation.invalid_property=Property {0} has invalid value {1}
-cloudformation.key_not_found={0} not found on {1}
+cloudformation.key_not_found={0} not found on resource {1}
 cloudformation.missing_property=Property {0} not found in {1}
 cloudformation.stack.delete.action=Delete Stack...
 cloudformation.stack.filter.show_completed=Show Completed
