--- a/package.json
+++ b/package.json
@@ -157,6 +157,11 @@
                     "default": 10000,
                     "description": "%aws.cloudWatchLogs.limit.desc%",
                     "maximum": 10000
+                },
+                "aws.manuallySelectedBuckets": {
+                    "type": "object",
+                    "description": "%AWS.samcli.deploy.bucket.recentlyUsed%",
+                    "default": []
                 }
             }
         },
