Allow deploying SAM templates from the CloudFormation node (#2465)
- Add the Serverless Deploy action to the CloudFormation root node
- Opens a file browser to select a template and runs all the same checks that the normal path does. The reason this wasn't refactored is the checking logic is all over the place.

--- a/jetbrains-core/resources/META-INF/plugin.xml
+++ b/jetbrains-core/resources/META-INF/plugin.xml
@@ -293,6 +293,10 @@ with what features/services are supported.
                     class="software.aws.toolkits.jetbrains.services.lambda.actions.DeleteFunctionAction"/>
         </group>
 
+        <group id="aws.toolkit.explorer.cloudformation" popup="true" compact="false">
+            <action id="cloudformation.serverless.deploy" class="software.aws.toolkits.jetbrains.services.lambda.actions.DeployServerlessApplicationAction" />
+        </group>
+
         <group id="aws.toolkit.explorer.cloudformation.stack" popup="true" compact="false">
             <action id="cloudformation.stack.view"
                     class="software.aws.toolkits.jetbrains.services.cloudformation.stack.OpenStackUiAction"/>
