httpMethod to allow empty string. This allows the webview to save a configuration without an httpMethod. Necessary for code and template target types

--- a/package.json
+++ b/package.json
@@ -400,7 +400,7 @@
                                     },
                                     "httpMethod": {
                                         "description": "%AWS.configuration.description.awssam.debug.api.httpMethod%",
-                                        "type": ["string", "undefined"],
+                                        "type": "string",
                                         "enum": [
                                             "delete",
                                             "get",
@@ -408,7 +408,8 @@
                                             "options",
                                             "patch",
                                             "post",
-                                            "put"
+                                            "put",
+                                            ""
                                         ]
                                     },
                                     "payload": {
