--- a/buildspec/linuxIntegrationTests.yml
+++ b/buildspec/linuxIntegrationTests.yml
@@ -26,7 +26,7 @@ phases:
       - apt-get update
       - apt-get install -y jq python2.7 python3.6 python3.7 python3.8 python3-pip python3-distutils
       # As of Ubuntu 20.4, there is no longer pip for Python 2, so we need to install it manually
-      - curl https://bootstrap.pypa.io/2.7/get-pip.py --output get-pip.py
+      - curl https://bootstrap.pypa.io/pip/2.7/get-pip.py --output get-pip.py
       - python2 get-pip.py
       - aws sts assume-role --role-arn $ASSUME_ROLE_ARN --role-session-name integ-test > creds.json
       - export KEY_ID=`jq -r '.Credentials.AccessKeyId' creds.json`
