Lambda UX: Add remaining fields, logic to config editor #1535
* added aws section, more fields button, moved invoke target selection, removed load resource button from code section

* wip adding all fields from launch config to form

* correction to select options for containerBuild field

* style change

* Added remaining fields to form

* Fields that should be arrays will save as a string array

* wip, refactored save and invoke functions

* Load existing config sets a default value if one is not received

* Numbers and booleans save and load in correct type

* Modified api configuration option to allow undefined for httpMethod

* httpMethod to allow empty string. This allows the webview to save a configuration without an httpMethod. Necessary for code and template target types

* Delete Vue file, nit fixes

--- a/package.json
+++ b/package.json
@@ -408,7 +408,8 @@
                                             "options",
                                             "patch",
                                             "post",
-                                            "put"
+                                            "put",
+                                            ""
                                         ]
                                     },
                                     "payload": {
