Migrate lolex to @sinonjs/fake-timers

--- a/package.json
+++ b/package.json
@@ -1514,6 +1514,7 @@
     },
     "devDependencies": {
         "@aws-toolkits/telemetry": "0.0.80",
+        "@sinonjs/fake-timers": "^7.0.2",
         "@types/adm-zip": "^0.4.32",
         "@types/async-lock": "^1.1.0",
         "@types/bytes": "^3.1.0",
@@ -1522,7 +1523,6 @@
         "@types/glob": "^7.1.1",
         "@types/js-yaml": "^3.12.0",
         "@types/lodash": "^4.14.136",
-        "@types/lolex": "^5.1.0",
         "@types/marked": "^0.6.5",
         "@types/mime-types": "^2.1.0",
         "@types/mocha": "^7.0.2",
@@ -1530,7 +1530,7 @@
         "@types/readline-sync": "^1.4.3",
         "@types/request": "^2.47.1",
         "@types/semver": "^5.5.0",
-        "@types/sinon": "^7.0.13",
+        "@types/sinon": "^9.0.11",
         "@types/tcp-port-used": "^1.0.0",
         "@types/uuid": "^3.4.4",
         "@types/vscode": "1.42.0",
@@ -1548,7 +1548,6 @@
         "husky": "^2.3.0",
         "istanbul": "^0.4.5",
         "json-schema-to-typescript": "^8.2.0",
-        "lolex": "^5.1.0",
         "marked": "^0.7.0",
         "mocha": "^7.1.1",
         "mocha-junit-reporter": "^1.23.3",
