--- a/package.json
+++ b/package.json
@@ -1531,6 +1531,7 @@
         "@types/request": "^2.47.1",
         "@types/semver": "^5.5.0",
         "@types/sinon": "^9.0.11",
+        "@types/sinonjs__fake-timers": "^6.0.2",
         "@types/tcp-port-used": "^1.0.0",
         "@types/uuid": "^3.4.4",
         "@types/vscode": "1.42.0",
