--- a/package.json
+++ b/package.json
@@ -1513,7 +1513,7 @@
         "createRelease": "ts-node ./build-scripts/createRelease.ts"
     },
     "devDependencies": {
-        "@aws-toolkits/telemetry": "0.0.80",
+        "@aws-toolkits/telemetry": "^0.0.91",
         "@sinonjs/fake-timers": "^7.0.2",
         "@types/adm-zip": "^0.4.32",
         "@types/async-lock": "^1.1.0",
