--- a/package.json
+++ b/package.json
@@ -1127,7 +1127,10 @@
                 "command": "aws.ecr.createRepository",
                 "title": "%AWS.command.ecr.createRepository%",
                 "category": "AWS",
-                "icon": "$(add)"
+                "icon": {
+                    "light": "resources/light/plus.svg",
+                    "dark": "resources/dark/plus.svg"
+                }
             },
             {
                 "command": "aws.ecr.deleteRepository",
