--- a/buildspec/windowsTests.yml
+++ b/buildspec/windowsTests.yml
@@ -19,7 +19,13 @@ phases:
 
   build:
     commands:
-      - ./gradlew check coverageReport --info --full-stacktrace --console plain
+      - |
+        if ($Env:CODEARTIFACT_DOMAIN_NAME -and $Env:CODEARTIFACT_REPO_NAME) {
+          $Env:CODEARTIFACT_URL=aws codeartifact get-repository-endpoint --domain $Env:CODEARTIFACT_DOMAIN_NAME --repository $Env:CODEARTIFACT_REPO_NAME --format maven --query repositoryEndpoint --output text
+          $Env:CODEARTIFACT_AUTH_TOKEN=aws codeartifact get-authorization-token --domain $Env:CODEARTIFACT_DOMAIN_NAME --query authorizationToken --output text --duration-seconds 3600
+        }
+
+        ./gradlew check coverageReport --info --full-stacktrace --console plain
 
   post_build:
     commands:
