--- a/buildspec/linuxTests.yml
+++ b/buildspec/linuxTests.yml
@@ -18,6 +18,12 @@ phases:
 
   build:
     commands:
+      - |
+        if [ "$CODEARTIFACT_DOMAIN_NAME" ] && [ "$CODEARTIFACT_REPO_NAME" ]; then
+          CODEARTIFACT_URL=$(aws codeartifact get-repository-endpoint --domain $CODEARTIFACT_DOMAIN_NAME --repository $CODEARTIFACT_REPO_NAME --format maven --query repositoryEndpoint --output text)
+          CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token --domain $CODEARTIFACT_DOMAIN_NAME --query authorizationToken --output text --duration-seconds 3600)
+        fi
+
       - chmod +x gradlew
       - ./gradlew check coverageReport --info --full-stacktrace --console plain
       - ./gradlew buildPlugin
