Migrate ts-loader to esbuild-loader

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,6 @@
 {
+    "isolatedModules": true,
+    "esModuleInterop": true,
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
