--- a/package.json
+++ b/package.json
@@ -1541,6 +1541,7 @@
         "@typescript-eslint/parser": "^2.27.0",
         "circular-dependency-plugin": "^5.2.0",
         "decache": "^4.4.0",
+        "esbuild-loader": "2.10.0",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.10.1",
         "eslint-plugin-header": "^3.0.0",
