--- a/buildspec/linuxTests.yml
+++ b/buildspec/linuxTests.yml
@@ -42,7 +42,7 @@ phases:
       - rsync -rmq --include='*/' --include '**/build/idea-sandbox/system*/log/**' --exclude='*' . $TEST_ARTIFACTS/ || true
       - rsync -rmq --include='*/' --include '**/build/reports/**' --exclude='*' . $TEST_ARTIFACTS/ || true
       - rsync -rmq --include='*/' --include '**/test-results/**/*.xml' --exclude='*' . $TEST_ARTIFACTS/test-reports || true
-      - cp -r ./build/distributions/*.zip $BUILD_ARTIFACTS/ || true
+      - cp -r ./intellij/build/distributions/*.zip $BUILD_ARTIFACTS/ || true
 
 reports:
   unit-test:
