--- a/buildspec/linuxIntegrationTests.yml
+++ b/buildspec/linuxIntegrationTests.yml
@@ -17,11 +17,14 @@ phases:
             # WORKAROUND for out-of-date yarn key. https://github.com/yarnpkg/yarn/issues/7866
             - '>/dev/null apt-get install dirmngr && apt-key adv --refresh-keys --keyserver keyserver.ubuntu.com'
             - '>/dev/null add-apt-repository universe'
+            - '>/dev/null wget -O- https://apt.corretto.aws/corretto.key | sudo apt-key add - '
+            - '>/dev/null add-apt-repository "deb https://apt.corretto.aws stable main"'
             - '>/dev/null apt-get -qq install -y apt-transport-https'
             - '>/dev/null apt-get -qq update'
             # Install other needed dependencies
             - '>/dev/null apt-get -qq install -y jq python2.7 python-pip python3.6 python3.7 python3.8 python3-pip python3-distutils'
             - '>/dev/null apt-get -qq install -y libgtk-3-dev libxss1 xvfb libnss3-dev libasound2 libasound2-plugins libsecret-1-0'
+            - '>/dev/null apt-get -qq install -y java-1.8.0-amazon-corretto-jdk java-11-amazon-corretto-jdk'
             - '>/dev/null pip3 install --upgrade aws-sam-cli'
             - '>/dev/null pip3 install --upgrade awscli'
             - '>/dev/null pip3 install pylint'
