--- a/buildspec/linuxIntegrationTests.yml
+++ b/buildspec/linuxIntegrationTests.yml
@@ -17,7 +17,7 @@ phases:
             # WORKAROUND for out-of-date yarn key. https://github.com/yarnpkg/yarn/issues/7866
             - '>/dev/null apt-get install dirmngr && apt-key adv --refresh-keys --keyserver keyserver.ubuntu.com'
             - '>/dev/null add-apt-repository universe'
-            - '>/dev/null wget -O- https://apt.corretto.aws/corretto.key | sudo apt-key add - '
+            - '>/dev/null wget -O- https://apt.corretto.aws/corretto.key | apt-key add - '
             - '>/dev/null add-apt-repository "deb https://apt.corretto.aws stable main"'
             - '>/dev/null apt-get -qq install -y apt-transport-https'
             - '>/dev/null apt-get -qq update'
