--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
         "onLanguage:python",
         "onLanguage:csharp",
         "onLanguage:yaml",
-        "onCommand:aws.lambda.invokeForm"
+        "onCommand:aws.launchConfigForm"
     ],
     "main": "./extensionMain",
     "contributes": {
@@ -1071,8 +1071,8 @@
         },
         "commands": [
             {
-                "command": "aws.lambda.invokeForm",
-                "title": "%AWS.command.lambda.editor.title%",
+                "command": "aws.launchConfigForm",
+                "title": "%AWS.command.launchConfigForm.title%",
                 "category": "AWS"
             },
             {
